fix: stat table width on small devices

--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ button.weapon-skill {
 }
 
 .weapon-stat-table {
-    width: 14em;
+    width: min(14em, (var(--content-width) / 2) - 2rem);
 
     border-collapse: separate;
     border-spacing: 0 0.25em;
